--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <header class="flex flex-wrap items-center justify-between mb-4 gap-2">
     <div>
       <h1 id="titulo" class="text-2xl font-semibold text-green-600">Cardápio da Cantina</h1>
-      <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG e PDF responsivo. (v2.8)</p>
+      <p class="text-sm text-slate-500">
+        Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG e PDF responsivo. (v2.9)
+      </p>
     </div>
     <div class="space-x-2">
       <button onclick="changeMonth(-1)" class="btn">◀</button>
@@ -35,8 +37,19 @@
 </div>
 
 <style>
-  .btn { padding: 0.5rem 0.75rem; border-radius: .5rem; border: 1px solid #e2e8f0; background: white }
-  .btn-primary { padding: 0.5rem 0.75rem; border-radius: .5rem; background: #16a34a; color: white; border: none }
+  .btn {
+    padding: 0.5rem 0.75rem;
+    border-radius: .5rem;
+    border: 1px solid #e2e8f0;
+    background: white;
+  }
+  .btn-primary {
+    padding: 0.5rem 0.75rem;
+    border-radius: .5rem;
+    background: #16a34a;
+    color: white;
+    border: none;
+  }
 </style>
 
 <script>
@@ -50,6 +63,16 @@ const titulo = document.getElementById("titulo");
 let viewDate = new Date();
 viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth(), 1);
 let menuData = {};
+
+function escapeHtml(text) {
+  const div = document.createElement("div");
+  div.textContent = text || "";
+  return div.innerHTML;
+}
+
+function openModalForDay(iso) {
+  alert("Edição desativada nesta versão. Data: " + iso);
+}
 
 function formatISO(y, m, d) {
   return `${y}-${String(m + 1).padStart(2, "0")}-${String(d).padStart(2, "0")}`;
@@ -78,36 +101,63 @@ function renderCalendar() {
   const year = viewDate.getFullYear();
   const month = viewDate.getMonth();
   titulo.textContent = `Cardápio da Cantina — ${viewDate.toLocaleString("pt-BR", { month: "long" })} ${year}`;
+
   calendarGrid.innerHTML = "";
 
-  const firstDay = new Date(year, month, 1);
-  let startWeekday = firstDay.getDay(); // 0=Dom, 1=Seg, ..., 6=Sab
-
-  // Ajustar para que Segunda seja 0 e Domingo fique fora
-  startWeekday = (startWeekday + 6) % 7;
-
   const daysInMonth = new Date(year, month + 1, 0).getDate();
+  let filledCols = 0;
 
-  // Cria espaços vazios até o primeiro dia real
-  for (let i = 0; i < startWeekday; i++) {
+  function createEmptyCell() {
     const empty = document.createElement("div");
     empty.className = "p-2 min-h-[100px]";
-    calendarGrid.appendChild(empty);
+    return empty;
   }
 
   for (let d = 1; d <= daysInMonth; d++) {
+    const dt = new Date(year, month, d);
+    const weekday = dt.getDay(); // 0=Dom,1=Seg,...,6=Sáb
+
+    if (weekday === 0) continue; // pula domingo
+
+    const col = weekday - 1; // Seg=0, Ter=1, ..., Sáb=5
+
+    if (filledCols <= col) {
+      while (filledCols < col) {
+        calendarGrid.appendChild(createEmptyCell());
+        filledCols++;
+      }
+    } else {
+      while (filledCols < 6) {
+        calendarGrid.appendChild(createEmptyCell());
+        filledCols++;
+      }
+      filledCols = 0;
+    }
+
     const iso = formatISO(year, month, d);
     const entry = menuData[iso] || {};
     const div = document.createElement("div");
-    div.className = "p-2 border rounded bg-white min-h-[100px] text-sm hover:bg-green-50 transition";
+    div.className = "p-2 border rounded bg-white min-h-[100px] text-sm";
     div.innerHTML = `
-      <div class="font-semibold">${d}</div>
-      <div class="mt-1">
-        ${entry.manha ? `<b>Manhã:</b> ${entry.manha}` : "<span class='text-slate-400'>Clique para editar</span>"}
+      <div class="flex justify-between items-start">
+        <div class="text-sm font-semibold">${d}</div>
+        <div class="text-xs text-slate-400">${dt.toLocaleDateString()}</div>
       </div>
-      ${entry.tarde ? `<div><b>Tarde:</b> ${entry.tarde}</div>` : ""}
+      <div class="text-left whitespace-pre-wrap break-words mt-1">
+        ${entry.manha ? `<div><span class="font-semibold">Manhã:</span> ${escapeHtml(entry.manha)}</div>` : `<div class="text-slate-400">Clique para editar</div>`}
+        ${entry.tarde ? `<div><span class="font-semibold">Tarde:</span> ${escapeHtml(entry.tarde)}</div>` : ``}
+      </div>
+      <div class="text-right mt-2">
+        <button onclick="openModalForDay('${iso}')" class="text-xs underline">Editar</button>
+      </div>
     `;
     calendarGrid.appendChild(div);
+    filledCols++;
+  }
+
+  while (filledCols > 0 && filledCols < 6) {
+    calendarGrid.appendChild(createEmptyCell());
+    filledCols++;
   }
 }
 
@@ -115,13 +165,13 @@ function changeMonth(delta) {
   viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth() + delta, 1);
   renderCalendar();
 }
+
 function goToday() {
   const d = new Date();
   viewDate = new Date(d.getFullYear(), d.getMonth(), 1);
   renderCalendar();
 }
 
-// ====== CORREÇÃO AQUI ======
 async function prepareExportWrapper() {
   const calendar = document.getElementById("calendar");
   const clone = calendar.cloneNode(true);
@@ -129,7 +179,7 @@ async function prepareExportWrapper() {
 
   const wrapper = document.createElement("div");
   wrapper.style.position = "absolute";
-  wrapper.style.left = "-9999px"; // <-- fora da tela, mas renderiza
+  wrapper.style.left = "-9999px";
   wrapper.style.top = "0";
   wrapper.style.background = "white";
   wrapper.style.padding = "40px";
@@ -168,13 +218,10 @@ async function prepareExportWrapper() {
   wrapper.appendChild(clone);
   document.body.appendChild(wrapper);
 
-  // 🔧 Delay necessário para o layout carregar completamente
   await new Promise(r => setTimeout(r, 150));
-
   return { wrapper };
 }
 
-// ====== EXPORTAR PNG ======
 async function generateImage() {
   const btn = document.getElementById("exportBtn");
   btn.disabled = true;
@@ -198,7 +245,6 @@ async function generateImage() {
   }
 }
 
-// ====== EXPORTAR PDF ======
 async function generatePDF() {
   const btn = document.getElementById("exportPdfBtn");
   btn.disabled = true;
