--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
       <h1 id="titulo" class="text-2xl font-semibold text-green-600">Cardápio da Cantina</h1>
       <p class="text-sm text-slate-500">
-        Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG e PDF responsivo. (v2.9)
+        Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG e PDF responsivo. (v3.0)
       </p>
     </div>
     <div class="space-x-2">
@@ -33,6 +33,41 @@
       <div>Seg</div><div>Ter</div><div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div>
     </div>
     <div id="calendar-grid" class="grid grid-cols-6 gap-2"></div>
+    <footer class="mt-4 text-xs text-slate-500">
+      Clique no botão "Editar" do dia para abrir o modal.
+    </footer>
+  </div>
+</div>
+
+<!-- Modal de edição -->
+<div id="modal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/40">
+  <div class="bg-white rounded-lg p-4 w-full max-w-lg max-h-[90vh] overflow-y-auto">
+    <h3 id="modal-title" class="font-semibold mb-2">Editar Cantina</h3>
+    <div class="space-y-3">
+      <div>
+        <label class="block text-sm font-medium">Data</label>
+        <div id="modal-date" class="text-sm text-slate-600"></div>
+      </div>
+
+      <div>
+        <label class="block text-sm font-medium">Manhã</label>
+        <textarea id="modal-manha" class="w-full p-2 border rounded h-24"></textarea>
+      </div>
+
+      <div>
+        <label class="block text-sm font-medium">Tarde</label>
+        <textarea id="modal-tarde" class="w-full p-2 border rounded h-24"></textarea>
+      </div>
+
+      <div class="flex justify-between items-center">
+        <div class="text-xs text-slate-500">Campos vazios ao salvar removem o registro.</div>
+        <div class="flex gap-2">
+          <button id="modal-delete" onclick="deleteFromModal()" class="btn text-red-600">Excluir</button>
+          <button onclick="closeModal()" class="btn">Cancelar</button>
+          <button id="modal-save" onclick="saveFromModal()" class="btn-primary">Salvar</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -50,60 +85,70 @@
     color: white;
     border: none;
   }
+  /* pequenas melhorias visuais no calendário */
+  #calendar-grid .text-left { font-size: 1.02rem; line-height: 1.3; }
+  #calendar-grid .font-semibold { font-size: 1.02rem; }
 </style>
 
 <script>
+// ====== CONFIG SUPABASE ======
 const SUPABASE_URL = "https://lfhgyyhzvhmdphgbvblc.supabase.co";
 const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxmaGd5eWh6dmhtZHBoZ2J2YmxjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk5MzEzOTYsImV4cCI6MjA3NTUwNzM5Nn0.ZAcoIbeOQFIo01qW_rcKIkJKvneqgeN6rpPSCFvTe1Y";
 const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+// ====== ELEMENTOS ======
 const calendarGrid = document.getElementById("calendar-grid");
 const titulo = document.getElementById("titulo");
+const modal = document.getElementById("modal");
+const modalDate = document.getElementById("modal-date");
+const modalManha = document.getElementById("modal-manha");
+const modalTarde = document.getElementById("modal-tarde");
+const modalSaveBtn = document.getElementById("modal-save");
+const modalDeleteBtn = document.getElementById("modal-delete");
 
 let viewDate = new Date();
 viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth(), 1);
 let menuData = {};
+let editingIso = null; // ISO yyyy-mm-dd da data que estamos editando
 
+// ====== UTIL ======
 function escapeHtml(text) {
-  const div = document.createElement("div");
-  div.textContent = text || "";
-  return div.innerHTML;
-}
-
-function openModalForDay(iso) {
-  alert("Edição desativada nesta versão. Data: " + iso);
+  const d = document.createElement("div");
+  d.textContent = text || "";
+  return d.innerHTML;
 }
 
 function formatISO(y, m, d) {
-  return `${y}-${String(m + 1).padStart(2, "0")}-${String(d).padStart(2, "0")}`;
+  return `${y}-${String(m + 1).padStart(2,"0")}-${String(d).padStart(2,"0")}`;
 }
 
+// ====== CARREGAR DADOS DO SUPABASE ======
 async function loadData() {
   try {
     const { data, error } = await supabaseClient
       .from("cardapio_cantina")
-      .select("data_iso, manha, tarde");
+      .select("data_iso, manha, tarde")
+      .order("data_iso", { ascending: true });
     if (error) throw error;
     menuData = {};
     data.forEach(row => {
-      const iso = typeof row.data_iso === "string"
-        ? row.data_iso
-        : new Date(row.data_iso).toISOString().slice(0, 10);
+      const iso = (typeof row.data_iso === "string") ? row.data_iso : new Date(row.data_iso).toISOString().slice(0,10);
       menuData[iso] = { manha: row.manha, tarde: row.tarde };
     });
     renderCalendar();
   } catch (err) {
     console.error("Erro ao carregar dados:", err);
+    alert("Erro ao carregar dados. Veja console.");
   }
 }
 
+// ====== RENDER CALENDÁRIO (Seg - Sáb) ======
 function renderCalendar() {
   const year = viewDate.getFullYear();
   const month = viewDate.getMonth();
   titulo.textContent = `Cardápio da Cantina — ${viewDate.toLocaleString("pt-BR", { month: "long" })} ${year}`;
 
   calendarGrid.innerHTML = "";
-
   const daysInMonth = new Date(year, month + 1, 0).getDate();
   let filledCols = 0;
 
@@ -117,9 +162,9 @@ function renderCalendar() {
     const dt = new Date(year, month, d);
     const weekday = dt.getDay(); // 0=Dom,1=Seg,...,6=Sáb
 
-    if (weekday === 0) continue; // pula domingo
+    if (weekday === 0) continue; // pulamos domingos
 
-    const col = weekday - 1; // Seg=0, Ter=1, ..., Sáb=5
+    const col = weekday - 1; // Seg=0 ... Sáb=5
 
     if (filledCols <= col) {
       while (filledCols < col) {
@@ -137,15 +182,17 @@ function renderCalendar() {
     const iso = formatISO(year, month, d);
     const entry = menuData[iso] || {};
     const div = document.createElement("div");
-    div.className = "p-2 border rounded bg-white min-h-[100px] text-sm";
+    div.className = "p-2 border rounded bg-white min-h-[100px] text-sm flex flex-col justify-between";
     div.innerHTML = `
-      <div class="flex justify-between items-start">
-        <div class="text-sm font-semibold">${d}</div>
-        <div class="text-xs text-slate-400">${dt.toLocaleDateString()}</div>
-      </div>
-      <div class="text-left whitespace-pre-wrap break-words mt-1">
-        ${entry.manha ? `<div><span class="font-semibold">Manhã:</span> ${escapeHtml(entry.manha)}</div>` : `<div class="text-slate-400">Clique para editar</div>`}
-        ${entry.tarde ? `<div><span class="font-semibold">Tarde:</span> ${escapeHtml(entry.tarde)}</div>` : ``}
+      <div>
+        <div class="flex justify-between items-start">
+          <div class="text-sm font-semibold">${d}</div>
+          <div class="text-xs text-slate-400">${dt.toLocaleDateString()}</div>
+        </div>
+        <div class="text-left whitespace-pre-wrap break-words mt-2">
+          ${entry.manha ? `<div><span class="font-semibold">Manhã:</span> ${escapeHtml(entry.manha)}</div>` : `<div class="text-slate-400">Clique para editar</div>`}
+          ${entry.tarde ? `<div class="mt-1"><span class="font-semibold">Tarde:</span> ${escapeHtml(entry.tarde)}</div>` : ""}
+        </div>
       </div>
       <div class="text-right mt-2">
         <button onclick="openModalForDay('${iso}')" class="text-xs underline">Editar</button>
@@ -155,125 +202,244 @@ function renderCalendar() {
     filledCols++;
   }
 
+  // completar a última linha
   while (filledCols > 0 && filledCols < 6) {
     calendarGrid.appendChild(createEmptyCell());
     filledCols++;
   }
 }
 
+// ====== MODAL: abrir / fechar / preencher ======
+function openModalForDay(iso) {
+  editingIso = iso;
+  const entry = menuData[iso] || { manha: "", tarde: "" };
+  modalDate.textContent = iso;
+  modalManha.value = entry.manha || "";
+  modalTarde.value = entry.tarde || "";
+  modal.classList.remove("hidden");
+  // habilita botões
+  modalSaveBtn.disabled = false;
+  modalDeleteBtn.disabled = false;
+}
+
+function closeModal() {
+  editingIso = null;
+  modal.classList.add("hidden");
+  modalManha.value = "";
+  modalTarde.value = "";
+}
+
+// ====== SALVAR (UPSERT) ======
+async function saveFromModal() {
+  if (!editingIso) return;
+  const manha = modalManha.value.trim();
+  const tarde = modalTarde.value.trim();
+  const isoDate = new Date(editingIso).toISOString().slice(0,10);
+
+  // feedback UI
+  modalSaveBtn.disabled = true;
+  modalSaveBtn.textContent = "Salvando...";
+
+  try {
+    const allEmpty = !manha && !tarde;
+    if (allEmpty) {
+      // se estiver vazio, deletar se existir
+      const { error } = await supabaseClient
+        .from("cardapio_cantina")
+        .delete()
+        .eq("data_iso", isoDate);
+      if (error) throw error;
+      delete menuData[isoDate];
+    } else {
+      const payload = { data_iso: isoDate, manha, tarde };
+      const { error } = await supabaseClient
+        .from("cardapio_cantina")
+        .upsert(payload, { onConflict: "data_iso" });
+      if (error) throw error;
+      menuData[isoDate] = { manha, tarde };
+    }
+
+    closeModal();
+    renderCalendar();
+  } catch (err) {
+    console.error("Erro ao salvar:", err);
+    alert("Erro ao salvar. Veja console.");
+  } finally {
+    modalSaveBtn.disabled = false;
+    modalSaveBtn.textContent = "Salvar";
+  }
+}
+
+// ====== EXCLUIR a partir do modal ======
+async function deleteFromModal() {
+  if (!editingIso) return;
+  if (!confirm("Confirma exclusão deste dia do cardápio?")) return;
+
+  modalDeleteBtn.disabled = true;
+  modalDeleteBtn.textContent = "Excluindo...";
+
+  try {
+    const isoDate = new Date(editingIso).toISOString().slice(0,10);
+    const { error } = await supabaseClient
+      .from("cardapio_cantina")
+      .delete()
+      .eq("data_iso", isoDate);
+    if (error) throw error;
+    delete menuData[isoDate];
+    closeModal();
+    renderCalendar();
+  } catch (err) {
+    console.error("Erro ao excluir:", err);
+    alert("Erro ao excluir. Veja console.");
+  } finally {
+    modalDeleteBtn.disabled = false;
+    modalDeleteBtn.textContent = "Excluir";
+  }
+}
+
+// ====== NAVEGAÇÃO ======
 function changeMonth(delta) {
   viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth() + delta, 1);
   renderCalendar();
 }
-
 function goToday() {
   const d = new Date();
   viewDate = new Date(d.getFullYear(), d.getMonth(), 1);
   renderCalendar();
 }
 
+// ====== EXPORTAÇÃO: prepara wrapper (logo + título + clone do calendar) ======
 async function prepareExportWrapper() {
   const calendar = document.getElementById("calendar");
   const clone = calendar.cloneNode(true);
+  // remover botões que não queremos no export
   clone.querySelectorAll("button").forEach(el => el.remove());
 
   const wrapper = document.createElement("div");
   wrapper.style.position = "absolute";
-  wrapper.style.left = "-9999px";
+  wrapper.style.left = "-9999px"; // fora da tela para não atrapalhar
   wrapper.style.top = "0";
   wrapper.style.background = "white";
   wrapper.style.padding = "40px";
   wrapper.style.border = "4px solid #16a34a";
   wrapper.style.borderRadius = "20px";
   wrapper.style.fontFamily = "Arial, sans-serif";
+  wrapper.style.boxSizing = "border-box";
 
-  const header = document.createElement("div");
-  header.style.display = "flex";
-  header.style.alignItems = "center";
-  header.style.gap = "20px";
-  header.style.marginBottom = "20px";
+  const headerRow = document.createElement("div");
+  headerRow.style.display = "flex";
+  headerRow.style.alignItems = "center";
+  headerRow.style.gap = "20px";
+  headerRow.style.marginBottom = "20px";
 
   const logo = document.createElement("img");
   logo.src = "https://i.ibb.co/KxSrH0Nj/logo.png";
   logo.crossOrigin = "anonymous";
   logo.style.maxHeight = "70px";
-  await new Promise(r => { logo.onload = r; logo.onerror = r; });
+
+  // não travar se o logo demorar — timeout
+  await new Promise(resolve => {
+    let done = false;
+    const ok = () => { if (!done) { done = true; resolve(); } };
+    logo.onload = ok; logo.onerror = ok;
+    setTimeout(ok, 1200);
+  });
 
   const titleBlock = document.createElement("div");
+  titleBlock.style.flex = "1";
   const monthName = viewDate.toLocaleString("pt-BR", { month: "long" });
   const year = viewDate.getFullYear();
   const title = document.createElement("h2");
   title.textContent = `Cardápio da Cantina — ${monthName.charAt(0).toUpperCase() + monthName.slice(1)}/${year}`;
   title.style.color = "#16a34a";
   title.style.fontSize = "22px";
-  title.style.fontWeight = "700";
+  title.style.margin = "0";
+
   const icons = document.createElement("div");
   icons.innerHTML = "🍽️ 🥗 🍖 🍊 🍮";
+  icons.style.fontSize = "20px";
   titleBlock.appendChild(title);
   titleBlock.appendChild(icons);
 
-  header.appendChild(logo);
-  header.appendChild(titleBlock);
-  wrapper.appendChild(header);
+  headerRow.appendChild(logo);
+  headerRow.appendChild(titleBlock);
+  wrapper.appendChild(headerRow);
   wrapper.appendChild(clone);
   document.body.appendChild(wrapper);
 
+  // dar tempo para o navegador renderizar o clone
   await new Promise(r => setTimeout(r, 150));
+
   return { wrapper };
 }
 
+// ====== EXPORTAR PNG ======
 async function generateImage() {
   const btn = document.getElementById("exportBtn");
+  if (btn.disabled) return;
   btn.disabled = true;
   const originalText = btn.textContent;
   btn.textContent = "Gerando...";
   try {
     const { wrapper } = await prepareExportWrapper();
-    const canvas = await html2canvas(wrapper, { scale: 2, backgroundColor: "#fff", useCORS: true });
+    // garantir fontes já carregadas
+    if (document.fonts && document.fonts.ready) await document.fonts.ready;
+    const canvas = await html2canvas(wrapper, { scale: 2, backgroundColor: "#fff", useCORS: true, allowTaint: false });
     const img = canvas.toDataURL("image/png");
     const a = document.createElement("a");
-    const year = viewDate.getFullYear();
     a.href = img;
-    a.download = `cantina-${year}-${String(viewDate.getMonth() + 1).padStart(2, "0")}.png`;
+    const year = viewDate.getFullYear();
+    a.download = `cantina-${year}-${String(viewDate.getMonth()+1).padStart(2, "0")}.png`;
+    document.body.appendChild(a);
     a.click();
+    a.remove();
     wrapper.remove();
   } catch (err) {
     console.error("Erro PNG:", err);
+    alert("Erro ao gerar PNG. Veja console.");
   } finally {
     btn.disabled = false;
     btn.textContent = originalText;
   }
 }
 
+// ====== EXPORTAR PDF ======
 async function generatePDF() {
   const btn = document.getElementById("exportPdfBtn");
+  if (btn.disabled) return;
   btn.disabled = true;
   const originalText = btn.textContent;
   btn.textContent = "Gerando...";
   try {
     const { wrapper } = await prepareExportWrapper();
-    const canvas = await html2canvas(wrapper, { scale: 2, backgroundColor: "#fff", useCORS: true });
+    if (document.fonts && document.fonts.ready) await document.fonts.ready;
+    const canvas = await html2canvas(wrapper, { scale: 2, backgroundColor: "#fff", useCORS: true, allowTaint: false });
     const img = canvas.toDataURL("image/png");
     const pdf = new window.jspdf.jsPDF("landscape", "mm", "a4");
-    const w = pdf.internal.pageSize.getWidth();
-    const h = pdf.internal.pageSize.getHeight();
-    const ratio = Math.min(w / canvas.width, h / canvas.height);
+    const pageW = pdf.internal.pageSize.getWidth();
+    const pageH = pdf.internal.pageSize.getHeight();
+    const margin = 8;
+    const ratio = Math.min((pageW - margin*2) / canvas.width, (pageH - margin*2) / canvas.height);
     const imgW = canvas.width * ratio;
     const imgH = canvas.height * ratio;
-    const x = (w - imgW) / 2;
-    const y = (h - imgH) / 2;
+    const x = (pageW - imgW) / 2;
+    const y = (pageH - imgH) / 2;
     pdf.addImage(img, "PNG", x, y, imgW, imgH, undefined, "FAST");
-    pdf.save(`cantina-${viewDate.getFullYear()}-${String(viewDate.getMonth() + 1).padStart(2, "0")}.pdf`);
+    const year = viewDate.getFullYear();
+    pdf.save(`cantina-${year}-${String(viewDate.getMonth()+1).padStart(2, "0")}.pdf`);
     wrapper.remove();
   } catch (err) {
     console.error("Erro PDF:", err);
+    alert("Erro ao gerar PDF. Veja console.");
   } finally {
     btn.disabled = false;
     btn.textContent = originalText;
   }
 }
 
+// ====== INICIALIZA ======
 loadData();
 </script>
+
 </body>
 </html>
